have a prettier job name
